@@ -15,6 +15,7 @@ CHANGELOG
 * class-Zone - reduce warning if not yet supported in pan-c framework
 * class-Zone - extend with type: tap, layer2, tunnel
 * update predefined.xml to 8070-5032
+* class-Address - introduce address object of type ip-wildcard
 
 utils:
 address-edit: improvement for actions=decommisssion - extend interface (ethernet/vlan/loopback/tunnel) with add/removeIPv4address
